--- a/2025_escola/views/includes/header.ejs
+++ b/2025_escola/views/includes/header.ejs
@@ -23,4 +23,5 @@
             <a href="/disciplinas/listar">disciplinas</a>
             <a href="/alunos/listar">alunos</a>
         </nav>
+        <p>bem-vindo,  <a href="">sair</a></p>
     </header>
