--- a/2025_escola/views/landing/index.ejs
+++ b/2025_escola/views/landing/index.ejs
@@ -40,7 +40,7 @@
 
 
     <div class="botao">
-        <a href="/admin/dashboard"> acessar <i class="fa-solid fa-arrow-right seta"></i></a>
+        <a href="/admin/login"> acessar <i class="fa-solid fa-arrow-right seta"></i></a>
     </div>
 </body>
 
