--- a/2025_escola/public/css/style.css
+++ b/2025_escola/public/css/style.css
@@ -23,7 +23,7 @@ nav>a {
 }
 
 
-nav > a:hover {
+nav>a:hover {
     color: blue;
     scale: 1.5;
     transition: 0.3;
@@ -123,7 +123,8 @@ h2 {
     margin-bottom: 5px;
 }
 
-.form-group input {
+.form-group input,
+.form-group select {
     border: 1px solid #c2c2c2;
     width: 100%;
     padding: 10px;
@@ -137,6 +138,48 @@ h2 {
 .form-group input:focus {
     border-color: #007bff
 }
-.acoes{
+
+.acoes {
     display: flex;
+}
+
+.lista-cards {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+
+}
+
+.card-aluno {
+    background-color: white;
+    width: 200px;
+    border-radius: 16px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-aluno>img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.form-cunsulta>input,
+.form-cunsulta>select {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.form-consulta{
+    display: flex;
+    gap: 10px;
 }
