--- a/2025_escola/views/disciplinas/lista.ejs
+++ b/2025_escola/views/disciplinas/lista.ejs
@@ -3,8 +3,19 @@
 
 
     <main>
-        <h2>lista de turmas</h2>
+        <h2>lista de Disciplinas</h2>
         <a href="/disciplinas/novo" class="btn btn-principal">adicionar disciplinas</a>
+       
+        <form action="/disciplinas/listar" method="get" class="form form-cunsulta">
+        <input type="text" name="busca" placeholder="Buscar por nome">
+        <select name="ordem" >
+            <option value="nome_disciplina">ordenar por disciplinas</option>
+            <option value="nome_disciplina desc">ordenar por disciplinas descendente</option>
+            <!-- <option value="formacao">ordenar por formação</option> -->
+        </select>
+        <button type="submit" class="btn btn-principal">Buscar</button>
+        </form>
+
         <table class="dado-table">
             <thead>
                 <tr>
