--- a/2025_escola/public/css/style.css
+++ b/2025_escola/public/css/style.css
@@ -183,3 +183,9 @@ h2 {
     display: flex;
     gap: 10px;
 }
+.paginacao{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 10px;
+}
