--- a/2025_escola/views/professores/lista.ejs
+++ b/2025_escola/views/professores/lista.ejs
@@ -8,15 +8,15 @@
 
         <!-- criando form de pesquisa -->
         <form action="/professores/listar" method="get" class="form form-cunsulta">
-        <input type="text" name="busca" placeholder="Buscar por nome ou Formação">
-        <select name="ordem" >
-            <option value="nome_professor">ordenar por professor</option>
-            <option value="nome_professor desc">ordenar por professor descendente</option>
-            <option value="formacao">ordenar por formação</option>
-        </select>
-        <button type="submit" class="btn btn-principal">Buscar</button>
+            <input type="text" name="busca" placeholder="Buscar por nome ou Formação" value="<%= busca %>">
+            <select name="ordem">
+                <option value="nome">ordenar por professor</option>
+                <option value="nome desc">ordenar por professor descendente</option>
+                <option value="formacao">ordenar por formação</option>
+            </select>
+            <button type="submit" class="btn btn-principal">Buscar</button>
         </form>
-       
+
 
 
         <table class="dado-table">
@@ -53,7 +53,17 @@
             </tbody>
         </table>
 
+       <div class="paginacao">
+            <% if (pgAtual > 1) { %>
+                <a href="/professores/listar?pg=<%= pgAtual - 1 %>">Anterior</a>
+            <% } %>
 
+            <span>Página <%= pgAtual %> de <%= totalPgs %> </span>
+
+            <% if (pgAtual < totalPgs) { %>
+                <a href="/professores/listar?pg=<%= pgAtual + 1 %>">Próxima</a>
+            <% } %>
+        </div>
 
     </main>
 
